# kata

./: .gitignore  LICENSE.md  LICENSE_ja.md  README.md  README_ja.md  pyproject.toml
development/update_logs/: 20260318-120848_unified-block-format.md
docs/manual/en/: cli-reference.md  index.md  (+14 more)
docs/samples/: 01_minimal_tpl.kata.md  02_web_security_tpl.kata.md  03_api_testing_tpl.kata.md  04_infra_audit_tpl.kata.md
gospelo_kata/: __init__.py  cli.py  coverage.py  extract.py  linter.py  template.py  validator.py  workflow.py
gospelo_kata/generator/: __init__.py  excel.py  html_editor.py  markdown.py
gospelo_kata/schemas/: agenda.json  checklist.json  test_prereq.json  test_spec.json
gospelo_kata/templates/: agenda.katar  agenda.katatpl  api_test.katar  checklist.katar  checklist.katatpl  header_test.katar  infra_test.katar  load_test.katar  pretest_review.katar  pretest_review.katatpl  scan_results.katar  storyboard.katar  test_prereq.katar  test_prereq.katatpl  test_spec.katar  test_spec.katatpl  todo.katar
gospelo_kata/themes/: __init__.py  default.css
skill/copilot/: copilot-instructions.md
tests/: __init__.py  test_cli.py  test_coverage.py  test_data_block.py  test_extract.py  test_linter.py  test_template.py  test_validator.py  test_validator_edge_cases.py  test_workflow.py
vscode-kata-lint/: CHANGELOG.md  LICENSE.md  README.ja.md  README.md  language-configuration.json  package-lock.json  package.json
vscode-kata-lint/src/: extension.ts
vscode-kata-lint/styles/: kata-preview.css
vscode-kata-lint/syntaxes/: kata-template.tmLanguage.json
(+100 files in other folders)
