[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gospelo-kata"
version = "0.2.0"
description = "KATA Markdown™ toolkit for human-AI collaboration: schema, validation, and template in a single file"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gospelo" },
]
keywords = [
    "document-generation",
    "json-schema",
    "markdown",
    "excel",
    "html-editor",
    "template",
]
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
gospelo-kata = "gospelo_kata.cli:main"

[project.urls]
Repository = "https://github.com/gospelo-dev/kata"

[tool.hatch.build.targets.sdist]
include = [
    "gospelo_kata/",
    "LICENSE.md",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["gospelo_kata"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
